css/style.css
body {
    background-color: #12100E;
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    padding: 0;
    color: #FFFDF7;
}
.navbar {
    width: 100%;
    background-color: #333;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
}

.navbar-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem;
    max-width: 1200px;
    margin: 0 auto;
}

.navbar-brand {
    color: #F46036;
    text-decoration: none;
    font-size: 1.5rem;
    margin: 0;
    padding: 0;
}

.sub-brand {
    font-size: 1.0rem;
    margin: 0;
    padding: 0;
    display: block;
    line-height: 1.2;
}

.navbar-menu {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}

.navbar-item {
    margin-left: 1rem;
}

.navbar-link {
    color: #F46036;
    text-decoration: none;
    padding: 0.5rem 1rem;
    transition: background-color .3s;
}

.navbar-link:hover {
    background-color: #575757;
    border-radius: 5px;
}

main {
    padding-top: 4rem;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    margin: 0 auto;
}

.white-space {
    
    display: flex;
    justify-content: center;
  
    height: 100px;
}

.rose-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    padding-top: 5rem;
    background-size: cover;
    background-position: center;
    height: 100px;
    width: 100px;
    opacity: .2;
    z-index: -1;
}



.container-works {
    display: flex;
    padding-left: 10%;
    justify-content: left;
    height: 60%;
    align-items: center;
    width: 100%;
    font-size: 2.5rem;
}

.underline-extended {
    display: inline-block; 
    position: relative; 
    padding-right: 50px;
}

.underline-extended:after {
    content: ''; 
    position: absolute; 
    left: 0; 
    right: -1000px; 
    bottom: 0; 
    height: 2px; 
    background-color: #FFFDF7; 
    z-index: -1; 
}


.content {
    flex-wrap:wrap;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 5rem;
}

.bio {
    flex: 1;
    padding-right: 10%;
    font-size: 1.5rem;
}

.profile-pic {
    flex: 0 0 300px;
    border-radius: 50%;
    overflow: hidden;
    width: 300px;
    height: 300px;
}

.profile-pic img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

h1 {
    color: #F46036;
    text-align: center;
    margin-top: 50px;
}

.work {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 1rem 0;
    padding: 4rem;
}

.work-image-wrapper {
   width: 450px;
   height: 250px;
    overflow: hidden;
    border-radius: 10px;
    
}
.work-image-wrapper img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

.work-title {
    font-size: 1.5rem;
    color: #F46036;
}

